--- a/uArm_Controller/app.config
+++ b/uArm_Controller/app.config
@@ -25,7 +25,7 @@
             <!--<add name="EventLog" type="System.Diagnostics.EventLogTraceListener" initializeData="APPLICATION_NAME"/> -->
         </sharedListeners>
     </system.diagnostics>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><userSettings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup><userSettings>
         <uArm_Controller.My.MySettings>
             <setting name="JoystickGUID" serializeAs="String">
                 <value>00000000-0000-0000-0000-000000000000</value>
